	* apps/examples/unionfs: Add a test of the union file system to
	  apps/examples (2015-06-05).
	* apps/examples/thttpd now uses the Union File System if BINFS is
	  selected for CGI binaries (2015-06-06).
	* apps/nshlib/: The NSH mount command now recognizes the Union file
	  system type when listing mounted file systems (2015-06-07).

7.11 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/netutils/thttpd:  Fix compilation problems when
	  CONFIG_THTTPD_GENERATE_INDICES is defined (2015-06-12).
	* apps/include: Clean up and review of header files for conformance to
	  standards (2015-06-12).
	* apps/examples/ostest/:  Extend the OS test to include a test of
	  pthread_mutex_trylock() for recursive mutexes. From Juha Niskanen
	  (2015-06-16).
	* apps/netutils/thttpd: Missing gci-src as a dependency path when
	  building with BINFS enabled (2015-06-18).
	* The apps/ directory has been removed from the NuttX GIT repository
	  and now stands alone in its own repository (2015-06-27).
	* apps/examples/poll: Fix a few bit-rot compilation errors (2015-07-01).
	* apps/nshlib: NSH will now support an (optional) shutdown command if
	  the board provides the option CONFIG_BOARDCTL_POWEROFF.  The command can
	  also be used to reset the system if CONFIG_BOARDCTL_RESET=y.
	  (2015-07-04).
	* apps/system/poweroff:  Remove the system poweroff command.  This is
	  replaced with the NSH shutdown command (2015-07-02).
	* apps/nshlib:  Add support for a uname command (2015-07-04).
	* apps/system/sysinfo:  Remove the system sysinfo command.  This is
	  replaced with the NSH uname command (2015-07-04).
	* apps/syste/netdb:  Add a command to access the network database
	  (2015-07-08).
	* apps/netuils/dnsclient and include/netutils/dnsclient.h:  Move the
	  DNS client logic into the NuttX C library.  It is a necessary part
	  for the full implementation of the netdb logic and provides more
	  flexibility in that location (2015-07-10).